fixing logo height on mobile

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -51,9 +51,7 @@ p {
 
 #iframe-mobile, iframe {
     position: absolute;
-    /*top: 6%;*/
     top: 0;
-    /*left: 30px;*/
     left: 0;
     width: 256px;
     height: 550px;
@@ -67,10 +65,16 @@ p {
 #logo {
     display: block;
     margin: auto 0 auto auto;
-    height: fit-content !important;
+    height: fit-content;
     border-radius: 80px;
     -webkit-border-radius: 80px;
     -moz-border-radius: 80px;
+}
+
+@media screen and (max-width: 500px) {
+    #logo {
+        height: 150px !important;
+    }
 }
 
 #themeColorPickerWrapper {
